--- a/src/components/Activities/Activities.css
+++ b/src/components/Activities/Activities.css
@@ -4,3 +4,15 @@
   /* justify-items: center; */
   gap: 40px;
 }
+
+@media screen and (max-width: 900px) {
+  .activity-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .activity-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
