--- a/src/components/Activity/Activity.css
+++ b/src/components/Activity/Activity.css
@@ -2,6 +2,7 @@
   background-color: #fff;
   padding: 20px;
   border-radius: 15px;
+  box-shadow: 0px 4px 5px 2px rgba(0, 0, 0, 0.1);
 }
 
 .activity-img {
@@ -9,7 +10,7 @@
 }
 
 .activity img {
-  width: 280px;
+  width: 100%;
   border-radius: 15px;
 }
 
@@ -20,4 +21,15 @@
   border-radius: 5px;
   border: none;
   color: #fff;
+}
+
+.add-list-btn:hover {
+  background-color: #7577ec;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+  .activity img {
+    /* width: 150px; */
+  }
 }
