--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -12,12 +12,13 @@
   height: 100vh;
   position: sticky;
   top: 0;
+  margin: 0 1%;
 }
 
 .container {
   max-width: 90%;
   /* background-color: bisque; */
-  margin: 0 auto;
+  margin: 5% auto;
 }
 
 .logo {
