--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -12,7 +12,9 @@
   height: 100vh;
   position: sticky;
   top: 0px;
-  margin: 0 1%;
+  padding: 0 1%;
+  /* margin: 0 1%;
+   */
   /* padding-top: 20px; */
 }
 
@@ -25,6 +27,9 @@
 .logo {
   width: 250px;
 }
+.space {
+  padding: 20px 0px;
+}
 
 @media screen and (max-width: 800px) {
   .home-container {
@@ -35,9 +40,12 @@
   }
   .right-container {
     width: 100%;
+    padding: 0 5%;
+    box-sizing: border-box;
+    height: fit-content;
+    margin-bottom: 20%;
   }
-}
-
-.space {
-  padding: 20px 0px;
+  .container {
+    margin-bottom: 20%;
+  }
 }
