--- a/src/components/Activity/Activity.css
+++ b/src/components/Activity/Activity.css
@@ -16,7 +16,7 @@
 
 .add-list-btn {
   width: 100%;
-  background-color: #5d5fef;
+  background-color: #25c2a0;
   padding: 13px 20px;
   border-radius: 5px;
   border: none;
@@ -24,7 +24,7 @@
 }
 
 .add-list-btn:hover {
-  background-color: #7577ec;
+  background-color: #2d8874;
   cursor: pointer;
 }
 
