--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -21,7 +21,7 @@
 .activity-info {
   display: flex;
   justify-content: space-between;
-  background-color: #f2f4fa;
+  background-color: #e9f9f6;
   padding: 0 20px;
   margin-top: 10%;
   border-radius: 15px;
